
Version 1.2.2 - 2025-08-20
---------------------------
- Fixed file permissions for transferred files:
  * Files created via drag & drop now get permissions -rw-rw---- (660)
  * Directories created get permissions drwxrwx--- (770)
  * Applied to all file operations: drag from Windows, internal copy/paste, and directory uploads
  * Matches permissions used by Android apps like @Voice

Version 1.2.1 - 2025-08-19
---------------------------
- Changed delete confirmation dialogs to default to "Yes" instead of "No"

Version 1.2.0 - 2025-08-13
---------------------------
- Added GitHub repository link to About dialog
- Fixed About dialog layout - GitHub link no longer cut off
- Improved notification system:
  * Replaced intrusive MessageBox dialogs with status line notifications
  * Added color-coded notifications: blue for success, red for errors
  * Notifications auto-dismiss after 3 seconds
  * Applied to favorites operations (add, remove, rename, already exists)
- Simplified favorites removal - no longer requires confirmation dialog
- Updated installer to display version number on welcome screen
- Created CLAUDE.md file with project build information

Version 1.1.0 - 2025-08-12 (using Claude Code from now on)
---------------------------
- Added About dialog with application name and version information
- Added Favorites/Bookmarks feature:
  * ComboBox dropdown for quick navigation to bookmarked directories
  * Add current folder to favorites with ⭐+ button
  * Remove selected favorite with ⭐- button
  * Right-click context menu to add folders to favorites
  * Edit favorite names via right-click context menu
  * Smart naming for generic folder names (shows parent context)
  * Persistent storage of favorites between sessions
  * Auto-sync folder tree when navigating to favorites
- Added Rename functionality:
  * F2 keyboard shortcut to rename files/folders
  * Context menu option for renaming in file list
  * Context menu option for renaming in folder tree