@@ -5,6 +5,7 @@
       "Bash(dotnet clean:*)",
       "Bash(dotnet build:*)",
       "Bash(\"C:\\Program Files (x86)\\NSIS\\makensis.exe\" Installer.nsi)",
+      "Bash(\"C:\\Program Files (x86)\\NSIS\\makensis.exe\" Installer.nsi)",
       "Bash(\"C:\\Program Files (x86)\\NSIS\\makensis.exe\" Installer.nsi)"
     ],
     "deny": [],
